# dyer-cli

./: .gitignore  Cargo.toml  README.md
src/: main.rs  util.rs
src/subcommand/: build.rs  check.rs  clean.rs  fix.rs  mod.rs  new.rs  run.rs  test.rs
